@@ -4,6 +4,8 @@ CHANGES
 Unreleased
 ----------
 
+* Added --interval and --version command line arguments
+
 * fixed bug in bar graph widget that tried to print more characters than
   allowed per line causing ctop to crash
 
